# onos-cu-cp

./: CMakeLists.txt  README.md
e2-agent/: CMakeLists.txt  README.md  cellMeasReport.txt  e2sim.cpp  kpm_callbacks.hpp  ueMeasReport.txt
e2-agent/ASN1c/: E2SM-KPM-EventTriggerDefinition-Format1.h
e2-agent/ricsim/: CMakeLists.txt~  build_e2sim  encode_e2apv1.cpp~  encode_kpm.hpp  ricsim.cpp
e2-agent/ricsim/extras/: ricsim.cpp
e2-agent/ricsim/src/ASN1/asn/: constraints.hpp  elements.hpp
e2-agent/ricsim/src/ASN1/asn/ber/: visitor.hpp
e2-agent/ricsim/src/ASN1/asn/per/: common.hpp  context.hpp  integer.hpp
e2-agent/ricsim/src/E2AP/: e2ap_message_handler.cpp
e2-agent/ricsim/src/E2AP/E2SM/: e2sm.c
e2-agent/ricsim/src/E2AP/XML/: E2AP_ENDCX2SetupRequest.xml  E2AP_ENDCX2SetupResponse.xml  E2AP_RICsubscriptionResponse.xml  E2AP_ResourceStatusFailure.xml  E2AP_ResourceStatusRequest.xml  E2AP_SetupRequest.xml  reference_constants.txt
e2-agent/ricsim/src/E2APr/: e2ap_message_handler.cpp~  e2ap_message_handler.hpp~
e2-agent/ricsim/src/E2APr/XML/: E2AP_ENDCX2SetupFailure.xml  E2AP_RICindication_type1.xml  E2AP_ResourceStatusUpdate.xml
e2-agent/ricsim/src/SCTP/: e2sim_sctp.h  e2sim_sctp.hpp
e2-agent/ricsim/src/X2AP/: x2ap_generate_messages.c
e2-agent/ricsim/src/X2AP/MESSAGES/XML/: sample_endc_x2_setup_response.xml
e2-agent/ricsim/test/Misc/: test_asn1c.cpp
e2-agent/ricsim/test/Pendulum/: e2sim_serial.c
e2-agent/ricsim/test/Pendulum/Serial/: adruino_serial.c
e2-agent/ricsim/test/WLG/: CMakeLists.txt  ric_perf.cpp
e2-agent/ricsim/test/X2/: CMakeLists.txt
e2-agent/ricsim/test/rmr_interface/: README
e2-agent/ricsim/test/rmr_interface/tests/receiver/: rmr_rcvr.c
e2-agent/ricsim/test/rmr_interface/tests/sender/: rmr_sender.c
e2-agent/ricsim/tools/: install_asn1c
e2-agent/src/ASN1/asn/: buffer.hpp  chunked_allocator.hpp  error_context.hpp  version.hpp
e2-agent/src/ASN1/asn/ber/: codec.hpp  length.hpp  opentype.hpp  tools.hpp
e2-agent/src/ASN1/asn/per/: choice.hpp  oid.hpp  sequence_of.hpp  whole_number.hpp
e2-agent/src/ASN1/lib/: asn_e2ap.hpp  asn_x2ap.cpp  asn_x2ap.hpp  asn_x2ap_wrapper.hpp  e2ap_config.hpp
e2-agent/src/E2AP/: e2ap_message_handler.cpp
e2-agent/src/E2AP/XML/: E2AP_RICindication_type2.xml  E2AP_RICsubscriptionRequest_Ashwin.xml  E2AP_ResourceStatusRequest_bad.xml  E2AP_X2SetupFailure.xml  GlobalE2node-ID.xml
e2-agent/src/X2AP/: x2ap_asn_codec.c  x2ap_message_handler.c
e2-agent/src/X2AP/MESSAGES/XML/: sample_x2_setup_failure.xml  sample_x2_setup_request.xml
e2-agent/test/Pendulum/: Pendulum_asn_codec.c
e2-agent/test/Pendulum/Serial/: adruino_serial.h
e2-agent/test/rmr_interface/: rmr_install.sh
e2-agent/tools/: build_helper.bash
images/: Dockerfile-base  Dockerfile-enb  Dockerfile-gnb  Dockerfile-nrue  Dockerfile-ue  README.md  build-all.sh
scripts/: install.sh
src/: CMakeLists.txt
src/e2/: CMakeLists.txt  encode_e2apv1.cpp  encode_e2apv1.hpp  encode_kpm.cpp  kpm_callbacks.cpp  ricsim.hpp  simulation.txt
src/e2/ricsim/: CMakeLists.txt  encode_e2apv1.cpp  encode_e2apv1.hpp
src/e2/ricsim/src/ASN1/asn/: asn.hpp  identifier.hpp  printer.hpp  utility.hpp  value_traits.hpp  variant.hpp
src/e2/ricsim/src/ASN1/asn/ber/: common.hpp  context.hpp  tag.hpp
src/e2/ricsim/src/ASN1/asn/per/: codec.hpp  enumerated.hpp  visitor.hpp
src/e2/ricsim/src/ASN1/lib/: asn_e2ap.cpp  asn_e2ap_wrapper.hpp
src/e2/ricsim/src/DEF/: e2sim_defs.cpp  e2sim_defs.h
src/e2/ricsim/src/E2AP/: e2ap_message_handler.hpp
src/e2/ricsim/src/E2AP/E2SM/: e2sm.h
src/e2/ricsim/src/E2AP/XML/: E2AP_PartSetupRequest.xml  E2AP_RICsubscriptionRequest.xml  E2AP_X2SetupResponse.xml
src/e2/ricsim/src/E2APr/: e2ap_asn1c_codec.c  e2ap_asn1c_codec.h  e2ap_message_handler.cpp  e2ap_message_handler.hpp
src/e2/ricsim/src/E2APr/XML/: E2AP_ResourceStatusResponse.xml  E2AP_X2SetupRequest.xml
src/e2/ricsim/src/X2AP/: x2ap_asn_codec.h  x2ap_generate_messages.h
src/e2/ricsim/src/X2AP/MESSAGES/XML/: sample_x2_setup_response.xml
src/e2/ricsim/test/Pendulum/: Pendulum_asn_codec.h  pendulum.asn1
src/e2/ricsim/test/WLG/: build_wlg.sh  ric_wlg.cpp
src/e2/ricsim/test/X2/: x2term.cpp
src/e2/ricsim/test/rmr_interface/tests/receiver/: build_and_run_recvr.sh
src/e2/ricsim/test/rmr_interface/tests/sender/: rmr_wrapper.h
src/e2/ricsim/tools/: install_dependencies
src/e2/src/ASN1/asn/: type_defs.h
src/e2/src/ASN1/asn/per/: binary_integer.hpp  bstring.hpp  length.hpp  ostring.hpp  sequence.hpp
src/e2/src/E2AP/XML/: E2AP_ErrorIndication.xml  E2AP_SetupRequest2.xml
src/e2/src/SCTP/: e2sim_sctp.c  e2sim_sctp.cpp
src/e2/src/X2AP/: x2ap_asn_codec.cpp  x2ap_asn_codec.hpp  x2ap_message_handler.cpp  x2ap_message_handler.h  x2ap_message_handler.hpp
src/e2/src/X2AP/MESSAGES/XML/: sample_endc_x2_setup_failure.xml  sample_endc_x2_setup_request.xml
src/e2/test/Misc/: CMakeLists.txt
src/e2/test/Pendulum/: demo_setup.txt  e2sim_closedloop.c  e2sim_test_client.c  e2termination_test.cpp
src/e2/test/Pendulum/Serial/: arduino-serial-lib.c  arduino-serial-lib.h
src/e2/test/X2/: x2agent.cpp  x2termination_test.cpp
src/e2/test/rmr_interface/tests/sender/: build_and_run_sender.sh
src/e2/tools/asn_defs/: generate_e2ap_e2sm_codes
